--- a/spago.yaml
+++ b/spago.yaml
@@ -5,7 +5,7 @@ workspace:
 package:
   name: compile-fail
   publish:
-    version: 0.1.0
+    version: 0.2.0
     license: MIT
     location:
       githubOwner: rowtype-yoga
@@ -17,4 +17,6 @@ package:
     - node-child-process: ">=11.1.0 <12.0.0"
     - node-execa: ">=5.0.0 <6.0.0"
     - prelude: ">=6.0.2 <7.0.0"
+    - node-fs: ">=9.0.0 <10.0.0"
+    - node-buffer: ">=9.0.0 <10.0.0"
     - strings: ">=6.0.1 <7.0.0"
